# Dyne

./: .gitignore  README.md  pyproject.toml  simple_cnn.onnx  simple_fno.onnx  simple_fno.onnx.data  simple_model.onnx
dyne/: __init__.py  cli.py  config.py
dyne.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dyne/compiler/: __init__.py  parser.py
dyne/compiler/partitioner/: __init__.py  base.py  simple_split.py
examples/cnn_demo/: dyne.toml  index.html  index.js
examples/cnn_v04_demo/: dyne.toml  index.html  index.js
examples/fno_demo/: dyne.toml  index.html  index.js
examples/heat_demo/: dyne.toml  index.js
examples/lorenz_demo/: dyne.toml  index.html  index.js
examples/onnx_demo/: dyne.toml  index.html  index.js
examples/quantized_demo/: dyne.toml  index.html  index.js
examples/split_demo/: dyne.toml  index.html  index.js
examples/wave_demo/: dyne.toml  index.html  index.js  wave_weights.json
examples/wave_pinn/: export_weights.py  generate_dummy_onnx.py  train.py  wave_pinn.onnx  wave_pinn.onnx.data  wave_pinn_clean.onnx  wave_weights.json
firmware/esp32-node/: CMakeLists.txt
firmware/esp32-node/components/wasm3/: CMakeLists.txt
firmware/esp32-node/main/: dyne_wasm.h  main.c  test_wasm.h
rust/: Cargo.toml
rust/dyne-core/: Cargo.toml
rust/dyne-core/src/: lib.rs
rust/solvers/cnn-quantized/: Cargo.toml
rust/solvers/cnn-quantized/src/: lib.rs
rust/solvers/cnn-v04/: Cargo.toml
rust/solvers/cnn-v04/src/: constants.rs  lib.rs
rust/solvers/dyne-embedded/: Cargo.toml
rust/solvers/dyne-embedded/.cargo/: config.toml
rust/solvers/dyne-embedded/src/: lib.rs
rust/solvers/embedded-test/: Cargo.toml
rust/solvers/embedded-test/.cargo/: config.toml
rust/solvers/embedded-test/src/: lib.rs
rust/solvers/fno-v0/: Cargo.toml
rust/solvers/fno-v0/src/: constants.rs  lib.rs
rust/solvers/generated-cnn/: Cargo.toml
rust/solvers/generated-cnn/src/: lib.rs
rust/solvers/generated-mlp/: Cargo.toml
rust/solvers/generated-mlp/src/: constants.rs  lib.rs
rust/solvers/heat-equation/: Cargo.toml
rust/solvers/heat-equation/src/: constants.rs  lib.rs
rust/solvers/lorenz-ode/: Cargo.toml
rust/solvers/lorenz-ode/src/: constants.rs  lib.rs
rust/solvers/raw-pinn-engine/: Cargo.toml
rust/solvers/raw-pinn-engine/src/: constants.rs  lib.rs
rust/solvers/split-wave/: Cargo.toml
rust/solvers/split-wave/src/: constants.rs  lib.rs
rust/solvers/wave-equation/: Cargo.toml
tests/: README.md  test_onnx_model.py
tools/: convert_conv1d_to_conv2d.py  create_cnn_onnx.py  create_dummy_onnx.py  create_fno_onnx.py  fix_symbolic_dims.py  fno2dyne.py  onnx2dyne.py  remove_value_info.py  split_fixed_onnx.py  wasm2h.py
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/tests/: test_optimization.rs
wasm/www/: index.js
