[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dyne"
version = "0.2.0"
description = "Universal Physics Container Toolchain"
dependencies = [
    "onnx>=1.14.0",
    "numpy",
    "click",
    "torch",
    "onnxscript",
    "toml",  # 追加: dyne.toml の読み込みに必要
]
requires-python = ">=3.8"

[project.scripts]
dyne = "dyne.cli:main"


[tool.setuptools.packages.find]
include = ["dyne*"]  # "dyne" で始まるパッケージのみを含める
exclude = ["wasm*", "rust*", "examples*", "tests*"] # それ以外は除外