[workspace]
members = [
    "dyne-core",
    "solvers/wave-equation", # さっき作ったやつ
    "solvers/raw-pinn-engine", "solvers/heat-equation", # 今回移植するやつ
    "solvers/heat-equation", "solvers/lorenz-ode", # <--- 追加
    "solvers/lorenz-ode",
    "solvers/generated-mlp",
    "solvers/generated-cnn",
    "solvers/cnn-v04",
]
resolver = "2"

