[workspace]
members = [
    "dyne-core",
    "solvers/wave-equation", # さっき作ったやつ
    "solvers/raw-pinn-engine", "solvers/heat-equation", # 今回移植するやつ
    "solvers/heat-equation", "solvers/lorenz-ode", # <--- 追加
    "solvers/lorenz-ode",
    "solvers/generated-mlp",
    "solvers/generated-cnn",
    "solvers/cnn-v04",
    "solvers/fno-v0",
    "solvers/split-wave",
    "solvers/cnn-quantized",
    "solvers/embedded-test", 
    "solvers/dyne-embedded",
]
resolver = "2"

[workspace.dependencies]
dyne-core = { path = "./dyne-core" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
rustfft = "6.1"
half = "2.3" # <--- 追加: f16サポート
