[package]
name = "dyne-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # WASMとしてコンパイルするために必須

[dependencies]
# WASMとJSの連携用
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# ONNX推論用 (tract)
# 比較的小サイズで、純粋なRust実装なのでWASMと相性が良い
tract-onnx = "0.22"
tract-core = "0.22"

# エラーハンドリング用
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }

web-sys = { version = "0.3", features = ["console"] }