[package]
name = "dyne-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# JSONの読み込み用
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# getrandom (WASM乱数用)
getrandom = { version = "0.2", features = ["js"] }