[package]
name = "dyne-solver-heat" # クレート名はハイフン区切りが一般的
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# 共通インターフェース
dyne-core = { path = "../../dyne-core" }

# web-sys (エラーログ用)
[dependencies.web-sys]
version = "0.3"
features = ["console"]