idf_component_register(
    SRCS 
        "source/m3_api_libc.c"
        "source/m3_api_meta_wasi.c"
        "source/m3_api_tracer.c"
        "source/m3_api_uvwasi.c"
        "source/m3_api_wasi.c"
        "source/m3_bind.c"
        "source/m3_code.c"
        "source/m3_compile.c"
        "source/m3_core.c"
        "source/m3_env.c"
        "source/m3_exec.c"
        "source/m3_function.c"
        "source/m3_info.c"
        "source/m3_module.c"
        "source/m3_parse.c"
    INCLUDE_DIRS "source"
)

target_compile_options(${COMPONENT_LIB} PRIVATE -w)